--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.22.0",
+        "@types/canvas-confetti": "^1.9.0",
         "@types/node": "^22.14.1",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
@@ -39,5 +40,8 @@
         "typescript": "~5.7.2",
         "typescript-eslint": "^8.26.1",
         "vite": "^6.3.1"
+    },
+    "dependencies": {
+        "canvas-confetti": "^1.9.3"
     }
 }
